--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-secure-store": "~14.2.3",
@@ -35,10 +36,12 @@
     "react-native": "0.79.5",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-gifted-charts": "^1.4.63",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "yup": "^1.7.0"
